<resources>

    <string name="app_name">PassaRegua</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_passa_regua">PassaRegua</string>

    <color name="myBlue">#336699</color>

    <string name="header">TopImage</string>
    <string name="total">Total da Conta</string>

    <color name="white">#FFFFFF</color>

    <string name="x">X</string>
    <string name="subtotal">Subtotal</string>
    <string name="calcular">Calcular</string>
    <string name="soma">Soma</string>
    <string name="tenpercent">10%</string>
    <string name="acrescentaitem">Acrescenta Item</string>
    <string name="suaparte">Sua Parte</string>
    <string name="resta">Resta</string>
    <string name="valor">Valor do Item</string>
    <string name="quantidade">Quantidade</string>
    <string name="historico">Histórico</string>
    <string name="voltar">Voltar</string>
    <string name="title_activity_lista_itens">ListaItens</string>
    <string name="background">Background</string>
    <string name="subtrai">Subtrai</string>
    <string name="vazio">Vazio</string>
    <color name="black">#000000</color>
    <string name="teste">teste</string>
    <string name="info">Info</string>
    <string name="passaregua">PassaRegua</string>
    <color name="red">#FF0000</color>
    <string name="dividir">Dividir</string>
    <string name="dividido">Valor Dividido</string>

</resources>